SM-Dev/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Color_Price__c</fullName>
        <label>Color Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Color_Type__c</fullName>
        <label>Color Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Color</fullName>
                </value>
                <value>
                    <fullName>Two Color</fullName>
                </value>
                <value>
                    <fullName>Three Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Brick Red</fullName>
                </value>
                <value>
                    <fullName>Charcoal</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>Desert Tan</fullName>
                </value>
                <value>
                    <fullName>Field Tan/Blake Orange</fullName>
                </value>
                <value>
                    <fullName>Fog Gray/Tahoe Blue</fullName>
                </value>
                <value>
                    <fullName>High Country</fullName>
                </value>
                <value>
                    <fullName>Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Olive Green</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Seafoam</fullName>
                </value>
                <value>
                    <fullName>Sky Blue</fullName>
                </value>
                <value>
                    <fullName>Stainless</fullName>
                </value>
                <value>
                    <fullName>Tahoe Blue</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LineItemID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LineItemID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_By_Date_Formula__c</fullName>
        <formula>Need_By_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Need By Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Campaign_Name__c</fullName>
        <label>Commerce Cloud Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Coupon_Code__c</fullName>
        <label>Commerce Cloud Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Flavour__c</fullName>
        <label>Flavour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Is_Demandware_Bonus_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Commerce Cloud Bonus Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Removed_Product_Basket_ID__c</fullName>
        <label>Removed Product Basket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Removed_Product_Date__c</fullName>
        <label>Removed Product Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Removed_from_Wishlist_Date__c</fullName>
        <label>Removed from Wishlist Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Removed_from_Wishlist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed from Wishlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Wishlist_Added_Date__c</fullName>
        <label>Wishlist Added Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Wishlist_Product_Priority__c</fullName>
        <inlineHelpText>0 - None 
1 - Highest 
2 - High 
3 - Medium 
4 - Low 
5 - Lowest</inlineHelpText>
        <label>Wishlist Product Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_By_Date__c</fullName>
        <formula>IF(ISBLANK(PricebookEntry.Product2.Expected_Ship_Date__c), Need_By_Date__c, IF(PricebookEntry.Product2.Expected_Ship_Date__c &gt; Need_By_Date__c, PricebookEntry.Product2.Expected_Ship_Date__c, Need_By_Date__c))</formula>
        <label>Ship By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>calcTotalPrice__c</fullName>
        <description>Used for the custom product selector.  Do not populated with data or add to page layouts.</description>
        <inlineHelpText>DO NOT POPULATE WITH DATA. REMOVE FROM PAGE LAYOUT.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Need_By_Date_Cannot_Be_Before_Available</fullName>
        <active>false</active>
        <errorConditionFormula>if(Not(IsBlank(PricebookEntry.Product2.Availability_Date__c))
&amp;&amp; Need_By_Date__c &lt; PricebookEntry.Product2.Availability_Date__c,true,false)</errorConditionFormula>
        <errorMessage>Need by date cannot be before the availability date for a product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OLI_NeedByDate_Before_Oppty_NeedByDate</fullName>
        <active>false</active>
        <description>Opportunity product need by date cannot be before opportunity need by date</description>
        <errorConditionFormula>Need_By_Date__c &lt;  Opportunity.Need_By_Date__c</errorConditionFormula>
        <errorDisplayField>Need_By_Date__c</errorDisplayField>
        <errorMessage>Product Need by Date must be after Opportunity Need by Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OLI_New_Account_Limited_Product</fullName>
        <active>false</active>
        <description>If account create date is less than 60 days from today, only allow product category of &quot;Coolers&quot; to be selected.</description>
        <errorConditionFormula>AND(
  Opportunity.Account.Limited_Product_Override__c = FALSE,
  Today()- Opportunity.Account.Established_Date__c  &lt; 60,
  Product2.Product_Category__c &lt;&gt; &quot;Coolers&quot;
)</errorConditionFormula>
        <errorMessage>This account was created within the last 60 days and is only authorized to order Coolers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OLI_Qty_Must_be_Mult_of_Min_Order_Qty</fullName>
        <active>true</active>
        <description>The entered quantity must be a multiple of the minimum order quantity for the selected product.</description>
        <errorConditionFormula>IF(MOD(Quantity,PricebookEntry.Product2.Minimum_Order_Quantity__c)&gt;0, true, false)</errorConditionFormula>
        <errorMessage>The entered quantity must be a multiple of the minimum order quantity for the selected product.</errorMessage>
    </validationRules>
</CustomObject>